# TSAI_ERA_v4_mini_capstone_S9

./: .gitignore  README.md  image_process.py  imagenet_dataset.py  imagenet_models.py  logger_setup.py  main.py  pyproject.toml  train_imagenet.py  utils.py
data_exploration/: imagenet_dataset_explorer.ipynb
dataset_analysis/: README.md  universal_dataset_explorer.ipynb
dataset_analysis/analysis_functions/: README.md  dataset_analyzer.py  usage_example.py
dataset_tools/: README.md  imagenet_subset_downloader.ipynb
docs/: CLEANUP_SUMMARY.md  EC2_instance.md  README.md  learning_rate_finder.md  main_py_usage_guide.md  project_requirements.md
image_process_lib/: cifar10model_v0_impro.py  image_preprocess_pytorch copy.py  image_preprocess_pytorch.py  image_preprocess_pytorch_imp.py  image_preprocess_pytorch_imp_channel4out.py  image_process.py
imagenet_data_exploration/: README.md
imagenet_dataset_tools/: imagenet_subset_downloader.ipynb
lr_optimization/: README.md  learning_rate_finder.ipynb  universal_lr_finder.ipynb
setup/: README.md  quick_setup.py  setup_uv.py  test_setup.py
tiny_imagenet_training/: README.md  __init__.py  pyproject.toml  train.py  train_cli_new.py  trainer_new.py
